sorted margin gap bug on section 1

--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -2,7 +2,6 @@
 
 .title {
   text-align: center;
-  margin-top: 40px;
   font-size: 108px;
   font-family: "Spline Sans, sans-serif";
   color: $primary-font-color;
@@ -28,7 +27,7 @@
 
 .section-1 {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
 }
 
 .section-2 {
@@ -40,7 +39,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-align: center;
+  // text-align: center;
 }
 
 .section-2 {
@@ -172,7 +171,7 @@
   }
 
   .title {
-    font-size: 80px;
+    font-size: 70px;
   }
 
   .hubspot-heading {
