--- a/styles/output.css
+++ b/styles/output.css
@@ -182,7 +182,6 @@ nav {
 }
 .title {
   text-align: center;
-  margin-top: 40px;
   font-size: 108px;
   font-family: "Spline Sans, sans-serif";
   color: #171a1e;
@@ -208,7 +207,7 @@ nav {
 
 .section-1 {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
 }
 
 .section-2 {
@@ -220,7 +219,6 @@ nav {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-align: center;
 }
 
 .section-2 {
@@ -352,7 +350,7 @@ nav {
     padding: 40px;
   }
   .title {
-    font-size: 80px;
+    font-size: 70px;
   }
   .hubspot-heading {
     font-size: 30px;
